corrected errors in files 6th  time

--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -53,3 +53,21 @@ spec:
         python -m pip install --upgrade pip wheel
         pip install -r requirements.txt
         nosetests $(params.args)
+
+---
+---
+apiVersion: tekton.dev/v1beta1
+kind: Task
+metadata:
+  name: deploy
+spec:
+  params:
+    - name: app-name
+      type: string
+    - name: build-image
+      type: string
+  steps:
+    - name: deploy-to-cluster
+      image: quay.io/openshift/origin-cli:latest
+      script: |
+        oc create deployment $(params.app-name) --image=$(params.build-image) --dry-run=client -o yaml | oc apply -f -
