corrected errors in files 10th  time

--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -69,9 +69,10 @@ spec:
     params:
       - name: build-image
         type: string
+    steps:
       - name: IMAGE
-        default: "$(params.build-image)"
-
+        image: image-registry.openshift-image-registry.svc:5000/$SN_ICR_NAMESPACE/tekton-lab:latest
+        script: buildah bud -t $IMAGE
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
